<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp" >

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/string_local_id" />

            <EditText
                android:id="@+id/edit_ratio"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="@string/string_local_width" />

            <EditText
                android:id="@+id/edit_width"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="@string/string_local_height" />

            <EditText
                android:id="@+id/edit_height"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp" />
        </TableRow>
        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="@string/string_local_quality" />

            <EditText
                android:id="@+id/edit_quality"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp" />
        </TableRow>
    </TableLayout>

    <Button
        android:id="@+id/btn_thumbnail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_local_set" />
    <Button
        android:id="@+id/btn_thumbnail1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_local_set1" />
    <Button
        android:id="@+id/btn_thumbnail2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_local_set2" />

</LinearLayout>